cbits/Bullet.h

void btBvhTriangleMeshShape_processAllTriangles(void *c,void* p0,float* p1,float* p2); //method: processAllTriangles void ( ::btBvhTriangleMeshShape::* )( ::btTriangleCallback *,::btVector3 const &,::btVector3 const & ) const
void btBvhTriangleMeshShape_refitTree(void *c,float* p0,float* p1); //method: refitTree void ( ::btBvhTriangleMeshShape::* )( ::btVector3 const &,::btVector3 const & ) 
void btBvhTriangleMeshShape_performConvexcast(void *c,void* p0,float* p1,float* p2,float* p3,float* p4); //method: performConvexcast void ( ::btBvhTriangleMeshShape::* )( ::btTriangleCallback *,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void btBvhTriangleMeshShape_serializeSingleBvh(void *c,void* p0); //method: serializeSingleBvh void ( ::btBvhTriangleMeshShape::* )( ::btSerializer * ) const
void btBvhTriangleMeshShape_setOptimizedBvh(void *c,void* p0,float* p1); //method: setOptimizedBvh void ( ::btBvhTriangleMeshShape::* )( ::btOptimizedBvh *,::btVector3 const & ) 
void btBvhTriangleMeshShape_m_bvh_set(void *c,void* a); //attribute: ::btOptimizedBvh * btBvhTriangleMeshShape->m_bvh
void* btBvhTriangleMeshShape_m_bvh_get(void *c); //attribute: ::btOptimizedBvh * btBvhTriangleMeshShape->m_bvh
void btBvhTriangleMeshShape_m_triangleInfoMap_set(void *c,void* a); //attribute: ::btTriangleInfoMap * btBvhTriangleMeshShape->m_triangleInfoMap
void* btBvhTriangleMeshShape_m_triangleInfoMap_get(void *c); //attribute: ::btTriangleInfoMap * btBvhTriangleMeshShape->m_triangleInfoMap
void btBvhTriangleMeshShape_m_useQuantizedAabbCompression_set(void *c,int a); //attribute: bool btBvhTriangleMeshShape->m_useQuantizedAabbCompression
int btBvhTriangleMeshShape_m_useQuantizedAabbCompression_get(void *c); //attribute: bool btBvhTriangleMeshShape->m_useQuantizedAabbCompression
void btBvhTriangleMeshShape_m_ownsBvh_set(void *c,int a); //attribute: bool btBvhTriangleMeshShape->m_ownsBvh
int btBvhTriangleMeshShape_m_ownsBvh_get(void *c); //attribute: bool btBvhTriangleMeshShape->m_ownsBvh
// attribute not supported: //attribute: bool[11] btBvhTriangleMeshShape->m_pad
void* btCapsuleShape_new0(); //constructor: btCapsuleShape  ( ::btCapsuleShape::* )(  ) 
void* btCapsuleShape_new1(float p0,float p1); //constructor: btCapsuleShape  ( ::btCapsuleShape::* )( ::btScalar,::btScalar ) 
void btCapsuleShape_free(void *c);
 
void btCapsuleShape_calculateLocalInertia(void *c,float p0,float* p1); //method: calculateLocalInertia void ( ::btCapsuleShape::* )( ::btScalar,::btVector3 & ) const
int btCapsuleShape_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btCapsuleShape::* )(  ) const
//not supported method: batchedUnitVectorGetSupportingVertexWithoutMargin void ( ::btCapsuleShape::* )( ::btVector3 const *,::btVector3 *,int ) const
// error:  - unsupported,  - unsupported, int - ok, void - ok

void btCapsuleShape_setLocalScaling(void *c,float* p0); //method: setLocalScaling void ( ::btCapsuleShape::* )( ::btVector3 const & ) 
int btCapsuleShape_getUpAxis(void *c); //method: getUpAxis int ( ::btCapsuleShape::* )(  ) const
char const * btCapsuleShape_getName(void *c); //method: getName char const * ( ::btCapsuleShape::* )(  ) const