Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_processAllTriangles as btBvhTriangleMeshShape_processAllTriangles'    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_refitTree as btBvhTriangleMeshShape_refitTree    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#62>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_refitTree as btBvhTriangleMeshShape_refitTree'    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_performConvexcast as btBvhTriangleMeshShape_performConvexcast    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, withVec3* `Vec3'  peekVec3* -- ^ boxSource
, withVec3* `Vec3'  peekVec3* -- ^ boxTarget
, withVec3* `Vec3'  peekVec3* -- ^ boxMin
, withVec3* `Vec3'  peekVec3* -- ^ boxMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_performConvexcast as btBvhTriangleMeshShape_performConvexcast'    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, allocaVec3-  `Vec3'  peekVec3* -- ^ boxSource
, allocaVec3-  `Vec3'  peekVec3* -- ^ boxTarget
, allocaVec3-  `Vec3'  peekVec3* -- ^ boxMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ boxMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#107>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_serializeSingleBvh as btBvhTriangleMeshShape_serializeSingleBvh    `( BtBvhTriangleMeshShapeClass bc , BtSerializerClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ serializer
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#78>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_setOptimizedBvh as btBvhTriangleMeshShape_setOptimizedBvh    `( BtBvhTriangleMeshShapeClass bc , BtOptimizedBvhClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ bvh
, withVec3* `Vec3'  peekVec3* -- ^ localScaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#78>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_setOptimizedBvh as btBvhTriangleMeshShape_setOptimizedBvh'    `( BtBvhTriangleMeshShapeClass bc , BtOptimizedBvhClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ bvh
, allocaVec3-  `Vec3'  peekVec3* -- ^ localScaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_bvh_set    `( BtBvhTriangleMeshShapeClass bc , BtOptimizedBvhClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_bvh_get    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  } ->  `BtOptimizedBvh'  mkBtOptimizedBvh* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_triangleInfoMap_set    `( BtBvhTriangleMeshShapeClass bc , BtTriangleInfoMapClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_triangleInfoMap_get    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  } ->  `BtTriangleInfoMap'  mkBtTriangleInfoMap* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#34>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_useQuantizedAabbCompression_set    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#34>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_useQuantizedAabbCompression_get    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#35>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_ownsBvh_set    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#35>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_m_ownsBvh_get    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
-- * btCapsuleShape
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_new0 as btCapsuleShape0    {  } -> `BtCapsuleShape' mkBtCapsuleShape* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#36>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_new1 as btCapsuleShape1    {   `Float' ,  `Float'  } -> `BtCapsuleShape' mkBtCapsuleShape* #}
{#fun btCapsuleShape_free    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#39>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_calculateLocalInertia as btCapsuleShape_calculateLocalInertia    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ mass
, withVec3* `Vec3'  peekVec3* -- ^ inertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#39>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_calculateLocalInertia as btCapsuleShape_calculateLocalInertia'    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ mass
, allocaVec3-  `Vec3'  peekVec3* -- ^ inertia
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#156>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_calculateSerializeBufferSize as btCapsuleShape_calculateSerializeBufferSize    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_setLocalScaling as btCapsuleShape_setLocalScaling    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ scaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_setLocalScaling as btCapsuleShape_setLocalScaling'    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ scaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#76>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_getUpAxis as btCapsuleShape_getUpAxis    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
{#fun btCapsuleShape_getName as btCapsuleShape_getName    `( BtCapsuleShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.h?r=2223#87>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp?r=2223>
-}
